src-ken&y/objects/Exchange_Rate__c.object
<CustomObject>
    <customHelpPage>HelpExchangeRates</customHelpPage>
    <description>Record the time snap shot of currency exchange rate that will be used for new records created.  Serves as a historical record of past rates</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox Active to perform check if the currency exchange rate is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Budget_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the conversion rate to be used for the budgeting / tax purposes</description>
        <inlineHelpText>A checkmark indicates that the exchange rate is used for budgeting and/or tax purposes.</inlineHelpText>
        <label>Budget/Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_From__c</fullName>
        <description>Currency converted from</description>
        <label>Currency From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_To__c</fullName>
        <description>Currency converted To</description>
        <label>Currency To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Monthly__c</fullName>
        <description>To distinguish the Daily rate and Monthly rate</description>
        <inlineHelpText>Specifies whether the rate is used daily or monthly.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Type__c</fullName>
        <description>Exchange rate type</description>
        <label>Exchange Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Exchange Rates</relationshipLabel>
        <relationshipName>Exchange_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiplier_Exchange_Rate__c</fullName>
        <description>Multiplier exchange rate ex. Currency From = USD and Currency to = EUR and multiplier exchange rate = 0.7714 10 USD = 10 *  0.7714 = 7.7143 USD</description>
        <inlineHelpText>The multiplier value that determines of the &quot;To&quot; currency.  For example, Currency From = USD, Currency To = EUR, and multiplier exchange rate = 0.7714. So, 10 USD = 10 * 0.7714 = 7.7143 EUR.</inlineHelpText>
        <label>Multiplier Exchange Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_End_DateTime__c</fullName>
        <inlineHelpText>Date and time the rate expires.</inlineHelpText>
        <label>Rate End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rate_Start_DateTime__c</fullName>
        <inlineHelpText>Date and time the rate takes effect.</inlineHelpText>
        <label>Rate Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Exchange Rates (To Currency)</relationshipLabel>
        <relationshipName>Exchange_Rates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Currency_From__c</columns>
        <columns>Currency_To__c</columns>
        <columns>Daily_Monthly__c</columns>
        <columns>Multiplier_Exchange_Rate__c</columns>
        <columns>Rate_Start_DateTime__c</columns>
        <columns>Rate_End_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exchange Rate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Monthly_exchange_rates_are_not_supported</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Daily_Monthly__c, &apos;Monthly&apos;)</errorConditionFormula>
        <errorDisplayField>Daily_Monthly__c</errorDisplayField>
        <errorMessage>Monthly exchange rates are not supported.</errorMessage>
    </validationRules>
</CustomObject>